failed tabs component, fix no tabs for dialog on mobile and hardwired reading, and move scoring icons outside accordion

--- a/src/components/pages/ChapterPage.css
+++ b/src/components/pages/ChapterPage.css
@@ -26,7 +26,17 @@
     align-items: flex-start;
 }
 
+.mobile-layout {
+    /* leave room for the tabs at the top */
+    margin-top: 50px;
+}
+
 .top {
-    position: absolute;
-    top: 0;
+    align-items: self-start;
+    width: auto;
+}
+
+.align-start {
+    margin-top: 50px;
+    align-items: self-start;
 }
